# micro_c_analyzer

./: .gitignore  Cargo.toml
src/: lib.rs
src/micro_c/: ast.rs  ast_visitor.rs  mod.rs
src/micro_c/analysis/: mod.rs
src/micro_c/analysis/detection_of_signs/: analysis.rs  expression_functions.rs  lattices.rs  mod.rs  transfer_functions.rs
src/micro_c/analysis/lifetime/: analysis.rs  mod.rs
src/micro_c/analysis/liveness/: analysis.rs  functions.rs  lattice.rs  mod.rs
src/micro_c/analysis/loan/: analysis.rs  lattice.rs  mod.rs
src/micro_c/lalrpop/: mod.rs  parser.lalrpop
src/micro_c/program_graph/: actions.rs  grapher.rs  mod.rs  program_graph.rs
tests/: all_tests.rs
tests/micro_c/: accepted_programs.rs  grapher.rs  mod.rs  programs.rs  rejected_programs.rs  solve.rs
